--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,35 @@ nav ul li a:hover {
     height: 100vh;
 }
 
+.landing-page h2 {
+  margin-top: 20vh;
+}
+
+.landing-page h1, .landing-page h2 {
+  color: #ffffff;
+  text-align: center;
+}
+
 /* Spinner */
 .spinners-container {
   height: 100vh;
   line-height: 100vh;
   width: 9.5%;
   margin: 0 auto;
+}
+
+/* Category */
+.category-filter {
+  margin-top: 20vh;
+  width: 65%;
+  margin: 20vh auto 0 auto;
+  background-color: #334eba;
+  height: 10vh;
+}
+
+.category-filter select {
+  width: 70%;
+  display: inline-block;
+  margin: 1% 0 0 15%;
+  height: 70%;
 }
