--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,13 @@ nav ul li a:hover {
   margin: 20vh auto 0 auto;
   background-color: #334eba;
   height: 10vh;
+  border-radius: 0.5em;
 }
 
 .category-filter select {
   width: 70%;
   display: inline-block;
-  margin: 1% 0 0 15%;
+  margin: 1.1% 0 0 15%;
   height: 70%;
+  border-radius: 0.3em;
 }
