--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ nav span {
 }
 
 nav span svg {
-  color: #334eba;
+  color: #ddae0a;
+  margin-right: 0.5em;
 }
 
 nav ul {
@@ -78,7 +79,7 @@ nav ul li a:hover {
   margin-top: 20vh;
   width: 65%;
   margin: 20vh auto 0 auto;
-  background-color: #334eba;
+  background-color: #ddae0a;
   height: 10vh;
   border-radius: 0.5em;
 }
@@ -89,4 +90,36 @@ nav ul li a:hover {
   margin: 1.1% 0 0 15%;
   height: 70%;
   border-radius: 0.3em;
+}
+
+/* Property */
+.properties-container {
+  margin-top: 2em;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.property-container {
+  width: 90%;
+  display: inline-block;
+  height: 60vh;
+}
+
+.properties-container h3 {
+  text-align: center;
+  margin-bottom: 1.2em;
+}
+
+.property-container figure {
+  width: 100%;
+  height: 60%;
+}
+
+.property-container figure img {
+  height: 100%;
+  width: 100%;
+}
+
+.property-container p:last-of-type s {
+  color: red;
 }
