Add to favourites protected action working

--- a/src/App.css
+++ b/src/App.css
@@ -278,3 +278,40 @@ nav ul li a:hover {
   background-color: #ffffff;
   color: #5f4b03;
 }
+
+/* Auth */
+.App .home-page {
+  position: relative;
+}
+
+.home-page .signup, .home-page .login {
+  top: -1000px;
+  position: absolute;
+}
+
+.home-page .login {
+  right: 0;
+  left: 0;
+  width: 100 vw;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.4)
+    );
+  z-index: 20;
+  transition: top 0.5s;
+  padding: 2em;
+}
+
+.home-page .login form {
+  color: #ffffff;
+  width: 30vw;
+  height: 40vh;
+  margin: 30vh auto 0 auto;
+}
+
+.home-page .login #closeLogin {
+  color: #ffffff;
+  font-size: 1.5em;
+  float: right;
+  cursor: pointer ;
+}
