--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,7 @@ nav ul li .sb-avatar__text span {
   font-size: 30px;
   text-decoration: none;
 }
+
 #back2Top:hover {
   background-color: #fff;
   color: #5f4b03;
@@ -297,13 +298,13 @@ nav ul li .sb-avatar__text span {
   position: relative;
 }
 
-.home-page .login, 
+.home-page .login,
 .home-page .signup {
   top: -1000px;
   position: absolute;
   right: 0;
   left: 0;
-  width: 100 vw;
+  width: 100vw;
   background: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.4)
@@ -323,7 +324,8 @@ nav ul li .sb-avatar__text span {
   border-radius: 0.3em;
 }
 
-.home-page .login form label, .home-page .signup form label {
+.home-page .login form label,
+.home-page .signup form label {
   display: block;
   font-weight: bolder;
 }
@@ -332,7 +334,8 @@ nav ul li .sb-avatar__text span {
   content: ':';
 }
 
-.home-page .login form input:last-of-type, .home-page .signup form input:last-of-type {
+.home-page .login form input:last-of-type,
+.home-page .signup form input:last-of-type {
   margin: 2em 2.7em 0 0;
   background-color: #ddae0a;
   color: #fff;
@@ -340,15 +343,16 @@ nav ul li .sb-avatar__text span {
   padding: 0.3em;
 }
 
-.home-page .login #closeLogin, .home-page .signup #closeSignup {
+.home-page .login #closeLogin,
+.home-page .signup #closeSignup {
   color: #fff;
   font-size: 1.5em;
   float: right;
   cursor: pointer ;
 }
 
-
-.home-page .login p span, .home-page .signup p span {
+.home-page .login p span,
+.home-page .signup p span {
   cursor: pointer;
   text-decoration: underline;
 } 
