--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
 
 nav {
   height: 10vh;
+  transition: height 1s;
 }
 
 nav .logo {
   font-size: 2em;
   color: #fff;
-  margin: 0 2em 0 2em;
+  margin: 0 1.2em 0 1.2em;
   text-transform: uppercase;
-  margin-right: 5vw;
   height: 10vh;
   line-height: 10vh;
 }
@@ -59,6 +59,25 @@ nav ul li .sb-avatar__text span {
   font-size: 1em;
 }
 
+nav #open-menu, nav #close-menu {
+  display: none;
+}
+
+nav #open-menu, #toggle, nav #close-menu {
+  position: absolute;
+  right: 2em;
+  top: 0.8em;
+  color: #fff;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#toggle {
+  z-index: 10;
+  top: 1.2em;
+  opacity: 0;
+}
+
 /* Landing Page */
 
 .landing-page {
@@ -71,7 +90,8 @@ nav ul li .sb-avatar__text span {
   background-size: cover;
   background-attachment: fixed;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  position: relative;
 }
 
 .landing-page h2 {
@@ -418,3 +438,44 @@ footer .footer-text {
   height: 10vh;
   line-height: 10vh;
 }
+
+@media only screen and (max-width:750px) {
+  /* Nav */
+  nav ul {
+    position: relative;
+    top: -1000px;
+    transition: top 1s;
+    left: 2em;
+  }
+
+  #toggle:checked ~ nav {
+    height: 45vh !important;
+    transition: height 1s;
+  }
+
+  #toggle:checked ~ nav ul {
+    top: 10vh;
+  }
+
+  nav #open-menu {
+    display: block;
+  }
+
+  #toggle:checked ~ nav #open-menu {
+    display: none;
+  }
+
+  #toggle:checked ~ nav #close-menu {
+    display: block;
+  }
+
+  nav ul li {
+    display: block;
+  }
+
+  /* Auth */
+  .home-page .login form,
+  .home-page .signup form {
+    width: 70%;
+  }
+ }
