Make Why Us section responsive on medium screens

--- a/src/App.css
+++ b/src/App.css
@@ -478,4 +478,9 @@ footer .footer-text {
   .home-page .signup form {
     width: 70%;
   }
+
+  /* Why Us */
+  .why-us .reason {
+    width: 50%;
+  }
  }
