--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,13 @@ nav ul li .sb-avatar__text span {
   font-size: 1em;
 }
 
-nav #open-menu, nav #close-menu {
+nav #open-menu,
+nav #close-menu {
   display: none;
 }
 
-nav #open-menu, #toggle, nav #close-menu {
+nav #open-menu,
+#toggle, nav #close-menu {
   position: absolute;
   right: 2em;
   top: 0.8em;
@@ -439,7 +441,7 @@ footer .footer-text {
   line-height: 10vh;
 }
 
-@media only screen and (max-width:750px) {
+@media only screen and (max-width: 750px) {
   /* Nav */
   nav ul {
     position: relative;
@@ -485,8 +487,7 @@ footer .footer-text {
   }
  }
 
-
-@media only screen and (max-width:615px) {
+@media only screen and (max-width: 615px) {
   /* Why Us */
   .why-us .reason {
     width: 100%;
@@ -496,4 +497,5 @@ footer .footer-text {
   .properties-container .land-properties-container .land-cont {
     width: 96%;
   }
+  
 }
