--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,8 @@ nav #close-menu {
 }
 
 nav #open-menu,
-#toggle, nav #close-menu {
+#toggle,
+nav #close-menu {
   position: absolute;
   right: 2em;
   top: 0.8em;
@@ -485,7 +486,7 @@ footer .footer-text {
   .why-us .reason {
     width: 50%;
   }
- }
+}
 
 @media only screen and (max-width: 615px) {
   /* Why Us */
@@ -497,5 +498,4 @@ footer .footer-text {
   .properties-container .land-properties-container .land-cont {
     width: 96%;
   }
-  
 }
