--- a/src/App.css
+++ b/src/App.css
@@ -307,7 +307,7 @@ nav #close-menu {
   transform: rotate(270deg);
   position: fixed;
   bottom: 50px;
-  right: 0;
+  right: 1.1em;
   background-color: rgb(0, 0, 0);
   color: #ddae0a;
   text-align: center;
